--- a/fly.toml
+++ b/fly.toml
@@ -1,5 +1,5 @@
 # Головний файл-інструкція для Fly.io
-app = "назва-вашого-додатку-на-fly-io"
+app = "TradeNews"
 primary_region = "ams" # Можете залишити ams (Амстердам) або обрати інший регіон
 
 [build]
